<resources>
    <string name="app_name">RES</string>
    <!--activity_first-->
    <string name="section">|</string>
    <string name="message1">빠르고 간편하게</string>
    <string name="message2">자주 가는 샵 예약하기</string>
    <string name="res_service">RES 서비스로 이용하기</string>
    <string name="out_service">Sign in with your sns account</string>
    <string name="use_google">구글계정으로 이용하기</string>
    <string name="use_kakao">카카오계정으로 이용하기</string>

    <!--activity_login-->
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="find_id">아이디 찾기</string>
    <string name="biz_login">사장님 로그인</string>
    <string name="next">다음</string>
    <string name="txt_email">이메일</string>
    <string name="email">exam@google.com</string>
    <string name="pw">영문 포함 특수문자 조합 9자 이상</string>
    <string name="auto_login">자동 로그인</string>
    <string name="google_login">구글계정으로 로그인</string>
    <string name="kakao_login">카카오계정으로 로그인</string>

    <!--activity_join-->
    <string name="user_agree">약관동의</string>
    <string name="welcom">에 오신 것을 환영합니다.</string>
    <string name="guide">간단한 회원가입 절차 후 서비스를 이용하실 수 있습니다.</string>
    <string name="agreement">이용약관</string>
    <string name="agree_all">모든 약관에 동의합니다.</string>
    <string name="agree_service">[필수] 서비스 이용 약관 동의</string>
    <string name="agree_information">[필수] 개인정보 수집 및 이용</string>
    <string name="agree_ad">[선택] 광고 수신 동의</string>
    <string name="view_agreement">[내용보기]</string>

    <!--activity_join2-->
    <string name="phone_number">휴대전화 번호</string>
    <string name="identity_verification">본인인증</string>
    <string name="input_pass_key">인증번호 입력</string>
    <string name="send_pass_key">전송</string>
    <string name="check_pass_key">인증번호 확인</string>

    <!--activity_join3-->
    <string name="input_userinformation">회원정보 입력</string>
    <string name="join_message">사용하실 계정과 비밀번호 등을 입력합니다.</string>
    <string name="input_email">이메일을 입력해주세요</string>
    <string name="input_pw">영문 포함 특수문자 조합 9자 이상</string>
    <string name="reinput_pw">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="input_realname">이름을 입력하세요.</string>
    <string name="complete_join">회원 등록</string>

    <!--activity_shop-->
    <string name="reservation">바로 예약하기</string>
    <string name="question">문의하기</string>
    <string name="notification">공지사항</string>
    <string name="surgery">시술목록</string>
    <!--LoginActivity-->
    <!--<string name="back_pressed_msg">"'뒤로' 버튼을 한번 더 누르시면 종료됩니다."</string>-->
    <string name="login_success_msg">로그인 성공</string>
    <string name="login_error_msg">아이디나 비밀번호를 확인하세요.</string>
    <string name="OnFailer_msg">연결 상태를 확인하세요.</string>

    <!-- Reservation Activity -->
    <string name="supp_name">%s</string>
    <string name="res_hello_msg">오늘 예약이</string>
    <string name="res_cnt">%d</string>
    <string name="res_msg">건 있습니다.</string>

    <!--Menu Dialog-->
    <string name="sug_name">시술명</string>
    <string name="price">금액</string>
    <string name="add">추가</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>

    <!--activity_calender-->
    <string name="shop_name">샵 이름</string>

    <!--activity_enroll-->
    <string name="enroll_myshop">나의 샵 등록하기</string>
    <string name="guide_enrollpage">사장님들을 위한 샵 등록 페이지 입니다</string>
    <string name="input_shopname">샵이름을 입력해주세요</string>
    <string name="biznum">사업자번호</string>
    <string name="input_biznum">사업자등록번호를 입력해주세요</string>
    <string name="addr_shop">샵 주소</string>
    <string name="input_address">도로명주소를 입력해주세요</string>
    <string name="input_detailed_address">상세주소를 입력해주세요</string>

    <!--activity_enroll2-->
    <string name="setting_myshop">나의 샵 설정하기</string>
    <string name="guide_enroll2page">샵의 영업시간과 메뉴를 설정합니다.</string>
    <string name="setting_time">영업시간 설정하기</string>
    <string name="open_time">오픈시간</string>
    <string name="close_time">마감시간</string>
    <string name="setting_day_off">휴무일 설정</string>
    <string name="setting_menu">시술메뉴 편집하기</string>
    <string name="guide_enroll2page2">버튼을 눌러 메뉴를 추가하거나</string>
    <string name="guide_enroll2page3">메뉴를 길게 눌러 편집 할 수 있습니다.</string>
    <!--activity_enroll2-->
    <string name="categorie">샵 카테고리</string>
    <string name="guide_categoie">샵의 카테고리를 설정합니다.</string>
    <string name="setting_categoie">카테고리 설정하기</string>
    <string name="guide_max">최대 3개까지 설정 가능합니다.</string>
    <string name="skincare">피부케어</string>
    <string name="eyelashes">속눈썹</string>
    <string name="nail">네일</string>
    <string name="waxing">왁싱</string>
    <string name="massage">마사지</string>
    <string name="etc">ETC</string>
    <string name="comple_myshopsetting">나의 샵 설정완료</string>

    <!--popup-->
    <string name="terms_of_service">이용약관</string>
    <string name="close">확인</string>

    <!--reservation_view-->
    <string name="view_all">모두 보기</string>
    <string name="my_res">나의 예약</string>
    <string name="view_detailed">자세히 보기</string>

    <!--activity_setting-->
    <string name="setting">설정</string>
    <string name="my_id">나의 계정</string>
    <string name="change_pw">비밀번호 변경</string>
    <string name="view_res">예약내역 보기</string>
    <string name="logout">로그아웃</string>
    <string name="withdrawal">회원탈퇴</string>
    <string name="service_center">고객센터</string>
    <string name="inquire">문의하기</string>
    <string name="report">신고하기</string>

    <!--activity_shop-->
    <string name="phonenum">연락처</string>
    <string name="shop_address">주소</string>

    <!--shop_list-->
    <string name="shop_list">샵 리스트</string>
    <!--dialog_del-->
    <string name="del_menu">메뉴를 삭제하시겠습니까?</string>

    <!--item_re_time-->
    <string name="select_time">시간선택</string>
    <!--recyclerview_surgery-->
    <string name="select_sug">시술선택</string>
    <string name="res">예약</string>

    <!--BackpressdManager-->
    <string name="back_pressed_msg">"'뒤로' 버튼을 한번 더 누르시면 종료됩니다."</string>
</resources>