<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/res_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <TextView
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/app_sandol_bold"
        android:text="@string/message1"
        android:textSize="25sp"
        android:textColor="@color/Selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:fontFamily="@font/app_sandol_bold"
        android:text="@string/message2"
        android:textSize="25sp"
        android:textColor="@color/Selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textSize="@dimen/txt_14"
        android:text="@string/res_service"
        android:fontFamily="@font/sandol_regular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/login_btn"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/sandol_regular"
            android:text="@string/login"
            android:textSize="@dimen/txt_14"
            android:textColor="@color/Selected"
            app:strokeColor="#1E1E1E"
            app:cornerRadius="5dp"
            android:layout_width="150dp"
            android:layout_height="45dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/join"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/sandol_regular"
            android:text="@string/join"
            android:textSize="@dimen/txt_14"
            android:textColor="@color/Selected"
            app:strokeColor="#1E1E1E"
            app:cornerRadius="5dp"
            android:layout_width="150dp"
            android:layout_height="45dp"/>

    </LinearLayout>



    <View
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/background_gray"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <TextView
        android:fontFamily="@font/sandol_regular"
        android:textSize="@dimen/txt_14"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/out_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:fontFamily="@font/sandol_regular"
            android:id="@+id/google_join"
            app:strokeColor="#1E1E1E"
            app:cornerRadius="5dp"
            android:drawablePadding="-50dp"
            android:text="@string/use_google"
            android:textSize="@dimen/txt_14"
            android:textColor="@color/Selected"
            android:drawableLeft="@drawable/glogo"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:fontFamily="@font/sandol_regular"
            android:id="@+id/kakao_join"
            app:strokeColor="#1E1E1E"
            app:cornerRadius="5dp"
            android:drawablePadding="-50dp"
            android:text="@string/use_kakao"
            android:textSize="@dimen/txt_14"
            android:textColor="@color/Selected"
            android:drawableLeft="@drawable/klogo"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>


    </LinearLayout>


</LinearLayout>

