<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/back_key"
                android:background="@drawable/ic_baseline_arrow_back_24"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <TextView
                android:gravity="center"
                android:text="@string/user_agree"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="310dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <View
            android:background="#d3d3d3"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/res_logo"
                android:layout_width="70dp"
                android:layout_height="70dp"/>
            <TextView
                android:fontFamily="@font/app_sandol_bold"
                android:text="@string/welcom"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <TextView
            android:fontFamily="@font/sandol_regular"
            android:layout_marginTop="5dp"
            android:text="@string/guide"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <!--약관 카드뷰-->
    <LinearLayout
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            app:cardElevation="20dp"
            app:cardUseCompatPadding="true"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="17dp">
            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:fontFamily="@font/app_sandol_bold"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:text="@string/agreement"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="#d3d3d3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <CheckBox
                    android:id="@+id/checkbox00"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sandol_regular"
                    android:text="@string/agree_all"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <View
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="#d3d3d3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:fontFamily="@font/sandol_regular"
                        android:id="@+id/checkbox01"
                        android:text="@string/agree_service"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"/>
                    <TextView
                        android:id="@+id/btn_view00"
                        android:fontFamily="@font/sandol_regular"
                        android:text="@string/view_agreement"
                        android:gravity="center"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <View
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="#d3d3d3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:fontFamily="@font/sandol_regular"
                        android:id="@+id/checkbox02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:text="@string/agree_information"
                        android:textSize="12sp"/>

                    <TextView
                        android:id="@+id/btn_view01"
                        android:fontFamily="@font/sandol_regular"
                        android:text="@string/view_agreement"
                        android:onClick="onTextViewClick"
                        android:clickable="true"
                        android:gravity="center"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"/>
                </LinearLayout>

                <View
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="#d3d3d3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:fontFamily="@font/sandol_regular"
                        android:id="@+id/checkbox03"
                        android:text="@string/agree_ad"
                        android:textSize="12sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"/>
                    <TextView
                        android:id="@+id/btn_view02"
                        android:onClick="onTextViewClick"
                        android:clickable="true"
                        android:fontFamily="@font/sandol_regular"
                        android:text="@string/view_agreement"
                        android:gravity="center"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <!--약관카드뷰 끝-->
    <LinearLayout
        android:layout_weight="0.1"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:fontFamily="@font/sandol_regular"
            android:id="@+id/nextBtn"

            app:strokeColor="@color/black"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="@string/next"
            android:textSize="14dp"
            android:layout_width="match_parent"
            android:layout_height="65dp"/>
    </LinearLayout>
</LinearLayout>