<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/back_key"
                android:background="@drawable/ic_baseline_arrow_back_24"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <TextView
                android:gravity="center"
                android:text="@string/identity_verification"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <View
            android:background="@color/line_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/res_logo"
                android:layout_width="70dp"
                android:layout_height="70dp"/>
            <TextView
                android:fontFamily="@font/app_sandol_bold"
                android:text="휴대폰 인증"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:hint="@string/phone_number"
            android:layout_width="230dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/td_phonenumber"
                android:inputType="phone"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendBtn"
            android:layout_marginLeft="10dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/black"
            android:text="@string/send_pass_key"
            android:textColor="@color/black"
            android:textSize="@dimen/btn_txt_size"
            android:layout_width="match_parent"
            android:layout_height="58dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/input_pass_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/td_numcheck"
                android:backgroundTint="@color/white"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/nextBtn"
            android:enabled="false"
            android:layout_marginTop="20dp"
            app:strokeColor="#1e1e1e"
            android:text="@string/check_pass_key"
            android:textSize="18sp"
            android:textColor="#1e1e1e"
            android:layout_width="match_parent"
            android:layout_height="65dp"/>
    </LinearLayout>
</LinearLayout>